systemdunit_DATA =
if INSTALL_CGISERV
systemdunit_DATA += moosefs-cgiserv.service
endif
if BUILD_CHUNKSERVER
systemdunit_DATA += moosefs-chunkserver.service
endif
if BUILD_MASTER
systemdunit_DATA += moosefs-master.service
endif
if BUILD_METALOGGER
systemdunit_DATA += moosefs-metalogger.service
endif
