systemdunit_DATA =
if BUILD_CHUNKSERVER
systemdunit_DATA += moosefs-chunkserver.service
systemdunit_DATA += moosefs-chunkserver@.service
endif
if BUILD_MASTER
systemdunit_DATA += moosefs-master.service
systemdunit_DATA += moosefs-master@.service
endif
if BUILD_METALOGGER
systemdunit_DATA += moosefs-metalogger.service
systemdunit_DATA += moosefs-metalogger@.service
endif
if BUILD_GUI
systemdunit_DATA += moosefs-gui.service
systemdunit_DATA += moosefs-gui@.service
endif
